# eml-extractor

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  release.yml  test.yml
eml_extractor/: __init__.py  parser.py  py.typed
eml_parser/: __init__.py  parser.py
examples/: README.md  basic_usage.py  email-2.eml  email.eml  email_address_parsing.py  email_to_html.py  extract_attachments.py
tests/: __init__.py  test.py  test_eml_extractor.py  test_eml_parser.py
